# testbed

./: AccFNN.py  AccLSTM.py  AccRNN.py  FeatureGrid.py  GeoTimeSeries.py  LICENSE.md  README.md  SparseTimeGrid.py  TimeGrid.py  basic_ff.py  basic_lstm.py  basic_sample_vis.py  cat_python_context.py  curate_pixelwise.py  curate_samples.py  docs_trick.py  env_linux.yml  eval_grid_samples.py  eval_grids.py  eval_gridstats.py  eval_models.py  eval_sequences.py  eval_static.py  eval_subgrid_samples.py  eval_timegrid.py  evaluate_model.py  evaluators.py  extract_feats.py  extract_nldas_grid.py  extract_nldas_subgrid.py  extract_pred_grids.py  extract_pred_sequences.py  extract_samples.py  extract_sequences.py  extract_timegrid.py  gen_batch.py  gen_sample.py  generators.py  gesdisc.py  get_forcings_1d.py  (+49 more)
data/: mae.pkl  model-entropy.json  model-entropy_rr-rmb.json  model-info.json  model-info_rr-rmb.json
dispatch/: slurm_acquire.queue  slurm_evaluate.queue  slurm_extract.queue
env/: conda_aes.yml  env_all.yml  mamba_aes.yml  mamba_learn.yml  mamba_learn3.yml
info/: SFLXALL_SRC_VER_2.8.f  info_earthdata_cookies.txt  info_nldas2-noah_gribtab.txt  info_nldas2_wgrib.txt  info_param_forcing.txt  info_param_static.txt  info_rsm_residual_norming.txt  info_wgrib.txt  info_wgrib_abbr.txt  info_wgrib_tricks.txt  model_notes.txt  texture_fieldcap_vegstress.txt
old/: GeoTimeSeries.py  data_look.py  get_lis_pynio.py  get_lis_web.py  get_nldas2_1d.py  grib_tools.py  make_1d_dataset.py  models.py  nldas_static_netcdf.py  plot_samples.py  stg_to_lstm_input.py
old_ams/: train_tcn.py  (+1 more)
(+582 files in other folders)
